# geek-taste

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  clippy.toml  moon.yml  package.json
.agents/skills/tailwindcss/: SKILL.md
.moon/: toolchains.yml  workspace.yml
.planning/: HANDOFF.json  NEXT-ACTIONS.md  PROJECT.md  QA-FINDINGS.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/00-moonrepo-monorepo/: 00-01-SUMMARY.md  00-03-SUMMARY.md  00-05-SUMMARY.md  00-VERIFICATION.md
.planning/phases/01-scaffold-auth/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/02-topk/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-subscription-signal/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-08-PLAN.md  03-08-SUMMARY.md  03-09-PLAN.md  03-09-SUMMARY.md  03-10-PLAN.md  03-10-SUMMARY.md  03-11-PLAN.md  03-11-SUMMARY.md  03-12-PLAN.md  03-12-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
.planning/phases/04-agent-resources-radar/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-polish-release/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-07-PLAN.md  05-08-PLAN.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-next-actions-qa/: 06-01-PLAN.md
.planning/research/: ARCHITECTURE.md  CLAUDE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/desktop-ui/: .editorconfig  .prettierrc  biome.json  eslint.config.js  moon.yml  package.json  pnpm-lock.yaml
apps/desktop-ui/src/: app.css  app.html
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/icons/: placeholder.txt
apps/desktop-ui/src-tauri/src/: lib.rs  main.rs
apps/desktop-ui/src/lib/: types.ts
apps/desktop-ui/src/lib/components/: FilterPanel.svelte  LanguagePicker.svelte  RankingList.svelte  RepoInfoModal.svelte  ResourceCard.svelte  ResourceFilters.svelte  SettingsGroup.svelte  Sidebar.svelte  SignalCard.svelte  SubscribePopover.svelte  SubscriptionCard.svelte  SubscriptionSearch.svelte  ViewSelector.svelte
apps/desktop-ui/src/lib/ipc/: tauri.ts
apps/desktop-ui/src/lib/stores/: auth.ts  network.ts  resources.ts  settings.ts  signals.ts  subscriptions.ts  topk.ts
apps/desktop-ui/src/routes/: +layout.svelte  +page.svelte
apps/desktop-ui/src/routes/onboarding/: +page.svelte
apps/desktop-ui/src/routes/resources/: +page.svelte
apps/desktop-ui/src/routes/rules/: +page.svelte
apps/desktop-ui/src/routes/settings/: +page.svelte
crates/application/: Cargo.toml
crates/application/src/: lib.rs  resource.rs  signal.rs  subscription.rs  topk.rs
crates/domain/: Cargo.toml  moon.yml
crates/domain/src/: auth.rs  lib.rs  ranking.rs  repository.rs  resource.rs  settings.rs  signal.rs  subscription.rs
crates/github_adapter/: Cargo.toml  moon.yml
crates/github_adapter/src/: auth.rs  lib.rs  rate_limit.rs  releases.rs  search.rs
crates/notification_adapter/: Cargo.toml  moon.yml
crates/notification_adapter/src/: lib.rs
crates/persistence_sqlite/: Cargo.toml  moon.yml
crates/persistence_sqlite/src/: lib.rs  migrations.rs  ranking_repository.rs  repo_repository.rs  resource_repository.rs  signal_repository.rs  subscription_repository.rs
crates/runtime_server/: moon.yml
crates/runtime_tauri/: Cargo.toml  moon.yml
crates/runtime_tauri/src/: lib.rs
crates/runtime_tauri/src/commands/: auth.rs  helpers.rs  mod.rs  resource.rs  settings.rs  signal.rs  subscription.rs  sync_status.rs  topk.rs
crates/shared_contracts/: Cargo.toml  moon.yml
crates/shared_contracts/src/: auth_dto.rs  error_dto.rs  lib.rs  ranking_dto.rs  repo_dto.rs  resource_dto.rs  settings_dto.rs  signal_dto.rs  subscription_dto.rs
(+2 files in other folders)
