[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared_contracts = { path = "../shared_contracts" }
persistence_sqlite = { path = "../persistence_sqlite" }
github_adapter = { path = "../github_adapter" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
