[package]
name = "github_adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared_contracts = { path = "../shared_contracts" }
octocrab = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
