[package]
name = "persistence_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared_contracts = { path = "../shared_contracts" }
rusqlite = { workspace = true }
serde_rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
