[package]
name = "persistence_sqlite"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
shared_contracts = { path = "../shared_contracts" }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
serde_rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
