[package]
name = "runtime_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
github_adapter = { path = "../github_adapter" }
persistence_sqlite = { path = "../persistence_sqlite" }
notification_adapter = { path = "../notification_adapter" }
shared_contracts = { path = "../shared_contracts" }
tauri = { workspace = true }
tauri-plugin-store = { workspace = true }
keyring = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
